# rasgb-pi

./: .gitignore  Cargo.toml
config/: config.toml
res/: board.md
scripts/: make_venv.sh  requirements.txt  send_clock.py  send_video.py
scripts/lib/: client.py  compression.py  resize.py
src/: config.rs  context.rs  main.rs  shutdown.rs  startup.rs
src/config/: load.rs  mod.rs
src/display/: mod.rs
src/display/fake/: mod.rs
src/display/pixels/: drawer.rs  mod.rs  winit.rs
src/display/rgb_led_matrix/: mod.rs
src/display/tui/: drawer.rs  mod.rs
src/frame/: mod.rs
src/frame/filler/: letterboxing.rs  mod.rs
src/lib/: blocking_option.rs  mod.rs
src/run/: mod.rs  signals.rs  sync.rs
src/sync/: mod.rs
src/web/: mod.rs  routes.rs  state.rs
src/web/api/: error.rs  mod.rs
src/web/api/frame/: data.rs  mod.rs  read.rs  write.rs
src/web/api/meta/: data.rs  mod.rs
