[package]
name = "rasgb-pi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
thiserror = "2.0.9"

pixels = "0.14.0"
winit = { version = "0.30.8", features = ["x11", "rwh_05"] }

axum = "0.8.1"
tokio = { version = "1.32.0", features = ["full"] }

serde = { version = "1.0.217", features = ["derive"] }
base64 = { version = "0.22.1"}

[profile.release]
codegen-units = 1
lto = "fat"
